--- a/docs/_static/theme.css
+++ b/docs/_static/theme.css
@@ -1,1 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=Source+Code+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@font-face {
+  font-family: "Atkinson Hyperlegible Next";
+  src: url("atkinson/AtkinsonHyperlegibleNextVF-Variable.woff2") format("woff2");
+  font-display: block;
+  font-weight: 200 800;
+}
+
+@font-face {
+  font-family: "Atkinson Hyperlegible Mono";
+  src: url("atkinson/AtkinsonHyperlegibleMonoVF-Variable.woff2") format("woff2");
+  font-display: block;
+  font-weight: 200 800;
+}
